Implement support for multiple monitors
This commit add so-called multi-monitor support to xfdashboard and addresses issue #14

--- a/data/themes/xfdashboard-auber/xfdashboard.css
+++ b/data/themes/xfdashboard-auber/xfdashboard.css
@@ -427,6 +427,7 @@ XfdashboardWindowsView
 	spacing: 8.0;
 	prevent-upscaling: true;
 	view-icon: windows-view.png;
+	filter-monitor-windows: true;
 }
 
 /* Focus */
