Add function to determine if a window needs attention (urgency window state) and allow XfdashboardLiveWindow to be stylable at specific window states (urgent, minimized, pinned)

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -154,6 +154,11 @@ XfdashboardLiveWindow .window-number
 	corner-radius: 4.0;
 }
 
+XfdashboardLiveWindow.window-state-urgent
+{
+	effects: window-urgency;
+}
+
 .drag-actor-XfdashboardLiveWindow:drag-handle
 {
 	background-type: outline fill rounded-corners;
