--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -177,16 +177,15 @@ XfdashboardLiveWindow.window-state-urgent
 /* Live workspaces */
 XfdashboardLiveWorkspace
 {
-	background-type: outline fill;
-	background-fill-color: #000000ff;
+	background-type: outline;
+	background-image-type: desktop;
 	outline-color: #404040ff;
 	outline-width: 1.0;
 }
 
 XfdashboardLiveWorkspace:active
 {
-	background-type: outline fill;
-	background-fill-color: #000000ff;
+	background-type: outline;
 	outline-color: #ffff00ff;
 	outline-width: 2.0;
 }
