Apply all last changes at default themes to all themes

--- a/data/themes/xfdashboard-mint/xfdashboard-mint.css
+++ b/data/themes/xfdashboard-mint/xfdashboard-mint.css
@@ -75,7 +75,7 @@ XfdashboardQuicklaunch #trash-button:drop-target
 	outline-color: #2CC248ff;
 }
 
-#workspace-selector
+XfdashboardWorkspaceSelector
 {
 	background-fill-color: #202020;
 	outline-color: #202020;
