--- a/data/themes/xfdashboard-auber/xfdashboard-auber.css
+++ b/data/themes/xfdashboard-auber/xfdashboard-auber.css
@@ -75,7 +75,7 @@ XfdashboardQuicklaunch #trash-button:drop-target
 	outline-color: #5E2750ff;
 }
 
-#workspace-selector
+XfdashboardWorkspaceSelector
 {
 	background-fill-color: #202020;
 	outline-color: #202020;
