--- a/data/themes/xfdashboard-moranga/xfdashboard-moranga.css
+++ b/data/themes/xfdashboard-moranga/xfdashboard-moranga.css
@@ -75,7 +75,7 @@ XfdashboardQuicklaunch #trash-button:drop-target
 	outline-color: #D64937ff;
 }
 
-#workspace-selector
+XfdashboardWorkspaceSelector
 {
 	background-fill-color: #202020;
 	outline-color: #202020;
