--- a/data/themes/xfdashboard-wine/xfdashboard-wine.css
+++ b/data/themes/xfdashboard-wine/xfdashboard-wine.css
@@ -75,7 +75,7 @@ XfdashboardQuicklaunch #trash-button:drop-target
 	outline-color: #9A111Dff;
 }
 
-#workspace-selector
+XfdashboardWorkspaceSelector
 {
 	background-fill-color: #202020;
 	outline-color: #202020;
