--- a/data/data/preferences.ui
+++ b/data/data/preferences.ui
@@ -137,7 +137,7 @@ Configure xfdashboard</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBox" id="switch-view-on-resume">
+                      <object class="GtkComboBox" id="switch-to-view-on-resume">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_markup" translatable="yes">When xfdashboard resumes the selected view will be activated.
