Make use of new pop-up menu in quicklaunch

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -580,3 +580,9 @@ XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton:selecte
 	margin-top: 2.0;
 	margin-bottom: 2.0;
 }
+
+.popup-menu.popup-menu-source-XfdashboardQuicklaunch
+{
+	show-title: true;
+	show-title-icon: true;
+}
