Add pop-up menu to menu items in applications view
The pop-up menus used at application buttons in applications view is mostly the same as used in quicklaunch, except that the menu items to add or remove the application from quicklaunch are not included.

This commit addresses issue GH #160

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -571,13 +571,15 @@ XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton:selecte
 	background-fill-color: #93c1ffff;
 }
 
-.popup-menu.popup-menu-source-XfdashboardQuicklaunch
+.popup-menu.popup-menu-source-XfdashboardQuicklaunch,
+.popup-menu.popup-menu-source-XfdashboardApplicationsView
 {
 	show-title: true;
 	show-title-icon: true;
 }
 
-.popup-menu.popup-menu-source-XfdashboardQuicklaunch XfdashboardLabel.popup-menu-item
+.popup-menu.popup-menu-source-XfdashboardQuicklaunch XfdashboardLabel.popup-menu-item,
+.popup-menu.popup-menu-source-XfdashboardApplicationsView XfdashboardLabel.popup-menu-item
 {
 	icon-size: 16;
 	text-justify: left;
