Add pop-up menu to menu items in result actors of application search provider in search view
The pop-up menus used at application buttons (result actors of application seaarch provider) in search view is mostly the same as used in quicklaunch, except that the menu items to add or remove the application from quicklaunch are not included.

This commit addresses issue GH #160

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -572,14 +572,16 @@ XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton:selecte
 }
 
 .popup-menu.popup-menu-source-XfdashboardQuicklaunch,
-.popup-menu.popup-menu-source-XfdashboardApplicationsView
+.popup-menu.popup-menu-source-XfdashboardApplicationsView,
+.popup-menu.popup-menu-source-XfdashboardApplicationsSearchProvider
 {
 	show-title: true;
 	show-title-icon: true;
 }
 
 .popup-menu.popup-menu-source-XfdashboardQuicklaunch XfdashboardLabel.popup-menu-item,
-.popup-menu.popup-menu-source-XfdashboardApplicationsView XfdashboardLabel.popup-menu-item
+.popup-menu.popup-menu-source-XfdashboardApplicationsView XfdashboardLabel.popup-menu-item,
+.popup-menu.popup-menu-source-XfdashboardApplicationsSearchProvider XfdashboardLabel.popup-menu-item
 {
 	icon-size: 16;
 	text-justify: left;
