Add property to search result container items in icon view mode to get the icon also displayed as in list mode.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -364,6 +364,7 @@ XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardApplicationBut
 
 XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton.result-item.view-mode-icon
 {
+	button-style: both;
 	icon-size: 64.0;
 	single-line: false;
 	sync-icon-size: false;
