Support all solid and gradient colors (linear and path gradients) at XfdashboardBackground as background fill color. Improve gradient specification parse to create gradient color from CSS.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -193,7 +193,7 @@ XfdashboardLiveWorkspace
 XfdashboardLiveWorkspace:active
 {
 	background-type: outline;
-	outline-color: foo #ffff00ff;
+	outline-color: #ffff00ff;
 	outline-width: 2.0;
 }
 
