Added new action signals which can be used at key bindings to add and/or remove CSS classes at run-time at stylable actors. Therefore action signals (usuable by key bindings) can now be detailed and need to specified at key bindings in format "action::detail".
Implements request from #16

--- a/data/themes/xfdashboard-auber/xfdashboard.css
+++ b/data/themes/xfdashboard-auber/xfdashboard.css
@@ -340,6 +340,17 @@ XfdashboardWorkspaceSelector
 	vertical-scrollbar-policy: automatic;
 }
 
+/* Views */
+XfdashboardView.view-list-mode
+{
+	view-mode: list;
+}
+
+XfdashboardView.view-icon-mode
+{
+	view-mode: icon;
+}
+
 /* Search view */
 XfdashboardSearchView XfdashboardSearchResultContainer
 {
