--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -339,6 +339,17 @@ XfdashboardWorkspaceSelector
 	vertical-scrollbar-policy: automatic;
 }
 
+/* Views */
+XfdashboardView.view-list-mode
+{
+	view-mode: list;
+}
+
+XfdashboardView.view-icon-mode
+{
+	view-mode: icon;
+}
+
 /* Search view */
 XfdashboardSearchView XfdashboardSearchResultContainer
 {
